[package]
name = "standalone-quote"
version = "0.4.2" # don't forget to update html_root_url, version in readme for breaking changes
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Fork of quote that uses rustc-ap-proc_macro and standalone-proc-macro2 so as to remove the rustc dylib dependency"
repository = "https://github.com/staktrace/standalone-quote"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
standalone-proc-macro2 = "0.2.2"
rustc-ap-proc_macro = "40.0.0"
